# Hakim

./: README.md
ecommerce/: README.rst  makeFile  pyproject.toml
ecommerce/core/core/utils/: collections.py  misc.py  settings.py
ecommerce/core/project/: settings.py  urls.py
ecommerce/core/project/settings/: __init__.py  base.py  custom.py  envvars.py
ecommerce/core/project/settings/templates/: settings.dev.py
ecommerce/project/: settings.py
